--- a/angular/cinema/src/app/component/user/profil/profil.component.scss
+++ b/angular/cinema/src/app/component/user/profil/profil.component.scss
@@ -1,5 +1,25 @@
 table {
-    width: 100%;
+    min-width: 50%;
+    margin: auto ;
+    margin-top: 24px ;
+    border-collapse: collapse;
+  }
+  
+  .app-qby-border {
+    width : 0px ;
+    border-right: solid 1px;
+    border-left: solid 1px ;
+  }
+
+  td {
+    text-align: left;
+    padding: 24px ;
+  }
+
+  tr:hover{
+    border-top: 1px solid ;
+    border-bottom: 1px solid ;
+    border-color: currentColor;
   }
 
   mat-card {
