--- a/angular/cinema/src/app/component/user/update-password/update-password.component.scss
+++ b/angular/cinema/src/app/component/user/update-password/update-password.component.scss
@@ -1,9 +1,7 @@
-table {
-  width: 100%;
-}
-
-mat-card {
-  min-height: 100vh;
+form {
+  min-width: 50%;
+  margin: auto;
+  margin-top: 24px;
 }
 
 button {
@@ -23,10 +21,17 @@ mat-card-content {
   text-align: center;
 }
 
-mat-icon {
+mat-card-header mat-icon {
   position: absolute;
   margin: 48px;
   transform: scale(5);
+}
+
+mat-form-field {
+  max-width: 400px ;
+  display: block;
+  margin : auto ;
+  margin-bottom : 8px ;
 }
 
 a {
@@ -35,13 +40,4 @@ a {
 
 a:hover {
   color: whitesmoke;
-}
-
-.mat-row .mat-cell {
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
-}
-
-.mat-row:hover .mat-cell {
-  border-color: currentColor;
 }
