--- a/angular/cinema/src/app/component/user/user.component.html
+++ b/angular/cinema/src/app/component/user/user.component.html
@@ -5,8 +5,9 @@
         <mat-card>
             <mat-card-header><mat-icon>face</mat-icon></mat-card-header>
             <mat-card-content>
-                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/profil']">Your Profil</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/profil']">My Profil</a></button>
                 <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/profil/update']">Profil Settings</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/password']">Change PassWord</a></button>
             </mat-card-content>
         </mat-card>
 
@@ -17,7 +18,10 @@
         
         <mat-card>
             <mat-card-header><mat-icon>event</mat-icon></mat-card-header>
-            
+            <mat-card-content>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/reservation']">My Reservations</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/reservation/delete']">Delete Reservations</a></button>
+            </mat-card-content>
 
         </mat-card>
 
@@ -28,7 +32,10 @@
         
         <mat-card>
             <mat-card-header><mat-icon>euro_symbol</mat-icon></mat-card-header>
-            
+            <mat-card-content>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/purchases']">My Purchases</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/reservation/create']">Create Reservation</a></button>
+            </mat-card-content>
 
         </mat-card>
 
@@ -39,7 +46,10 @@
         
         <mat-card>
             <mat-card-header><mat-icon>feedback</mat-icon></mat-card-header>
-            
+            <mat-card-content>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/comments']">My Comments</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/opinion']">My Room Ratings</a></button>
+            </mat-card-content>
 
         </mat-card>
 
