--- a/angular/cinema/src/app/component/user/reservation/reservation.component.html
+++ b/angular/cinema/src/app/component/user/reservation/reservation.component.html
@@ -1,4 +1,18 @@
+<mat-card>
+    <mat-card-header>
+                <mat-icon>event</mat-icon>
+        </mat-card-header>
 
+
+        <mat-card-content>
+                <mat-card-title>My Reservations</mat-card-title>
+                <button mat-raised-button color="primary">
+                        <a mat-stroked-button color="" [routerLink]="['/user']">Return</a>
+                </button>
+                <button mat-raised-button color="primary">
+                        <a mat-stroked-button color="" [routerLink]="['/user/reservation/delete']">Delete Reservation</a>
+                </button>
+                <mat-divider></mat-divider>
         <table mat-table [dataSource]="reservations" class="mat-elevation-z8">
 
             <ng-container matColumnDef="FILM">
@@ -21,3 +35,5 @@
             <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE', 'USER', 'SEAT'];"></tr>
             <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'USER', 'SEAT'];"></tr>
         </table>
+</mat-card-content>
+</mat-card>
