--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -10,7 +10,7 @@
             <a mat-stroked-button *ngIf="currentAccess==0" color="" [routerLink]="['/signup']" (click)="updatePage(5)">Sign Up Now !</a>
             <a mat-stroked-button *ngIf="currentAccess==1" color="" [routerLink]="['/user']" (click)="updatePage(7)">My Account</a>
             <a mat-stroked-button *ngIf="currentAccess==0 || currentAccess == 1" color="" [routerLink]="['/quizz-page/']" (click)="updatePage(6)">Quizz</a>
-            <a mat-stroked-button *ngIf="currentAccess==1" color="" [routerLink]="['']" (click)="logout()">Logout</a>
+            <a mat-stroked-button *ngIf="currentAccess==1 || currentAccess == 6" color="" [routerLink]="['']" (click)="logout()">Logout</a>
             <a mat-stroked-button *ngIf="currentAccess==6" color="" [routerLink]="['/admin']" (click)="updatePage(8)">CINEMA ADMINISTRATION</a>
         </div>
     </mat-toolbar>
