--- a/angular/cinema/src/app/component/user/create-reservation/create-reservation.component.html
+++ b/angular/cinema/src/app/component/user/create-reservation/create-reservation.component.html
@@ -1,14 +1,16 @@
+<mat-card>
+    <mat-card-header>
+                <mat-icon>euro_symbol</mat-icon>
+        </mat-card-header>
+
+
+        <mat-card-content>
+                <mat-card-title>My Purchases</mat-card-title>
+                <button mat-raised-button color="primary">
+                        <a mat-stroked-button color="" [routerLink]="['/user']">Return</a>
+                </button>
+                <mat-divider></mat-divider>
 <form (ngSubmit)="onSubmit()">
-    <div>
-        <mat-form-field appearance="fill">
-            <mat-label>User</mat-label>
-            <mat-select [(value)]="reservationJSON.idUser">
-                <mat-option *ngFor="let user of allUser" [value]="user">
-                    {{ user.pseudo }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
     <div>
         <mat-form-field appearance="fill">
             <mat-label>Movie</mat-label>
@@ -24,7 +26,7 @@
             <mat-label>Séance</mat-label>
             <mat-select [(value)]="reservationJSON.idDate">
                 <mat-option *ngFor="let session of allSession" [value]="session.idDate" (click)="updateSession(session)"> 
-                    {{ session.idDate }}
+                    {{ session.idDate | date :'full' }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
@@ -41,3 +43,5 @@
     </div>
     <button mat-button type="submit">SUBMIT NEW SESSION</button>
 </form>
+</mat-card-content>
+</mat-card>
