--- a/angular/cinema/src/app/component/user/user.component.html
+++ b/angular/cinema/src/app/component/user/user.component.html
@@ -33,7 +33,7 @@
         <mat-card>
             <mat-card-header><mat-icon>euro_symbol</mat-icon></mat-card-header>
             <mat-card-content>
-                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/purchases']">My Purchases</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/purchase']">My Purchases</a></button>
                 <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/reservation/create']">Create Reservation</a></button>
             </mat-card-content>
 
@@ -47,7 +47,7 @@
         <mat-card>
             <mat-card-header><mat-icon>feedback</mat-icon></mat-card-header>
             <mat-card-content>
-                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/comments']">My Comments</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/comment']">My Comments</a></button>
                 <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/opinion']">My Room Ratings</a></button>
             </mat-card-content>
 
