--- a/angular/cinema/src/app/component/user/update-profil/update-profil.component.html
+++ b/angular/cinema/src/app/component/user/update-profil/update-profil.component.html
@@ -53,7 +53,7 @@
     </div>
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>Duration</mat-label>
+            <mat-label>City</mat-label>
             <input matInput name='city' [(ngModel)]="user.idPerson.city">
         </mat-form-field>
     </div>
