--- a/angular/cinema/src/app/component/visitor/home/home.component.html
+++ b/angular/cinema/src/app/component/visitor/home/home.component.html
@@ -1,4 +1,31 @@
+        <mat-grid-tile>
+            
+            <mat-card>
+                <mat-card-header>Preview</mat-card-header>
+                <mat-card-content>
+                    
+                </mat-card-content>
+            </mat-card>
+    
+    
+    
+        </mat-grid-tile>
+        <mat-grid-tile>
+            
+            <mat-card>
+                <mat-card-header></mat-card-header>
+                <mat-card-content>
+                   
+                </mat-card-content>
+    
+            </mat-card>
+    
+    
+    
+        </mat-grid-tile>
 
-        Home
-
-
+    </mat-grid-list>
+    
+    
+    
+    
