--- a/angular/cinema/src/app/component/footer/footer.component.html
+++ b/angular/cinema/src/app/component/footer/footer.component.html
@@ -1,9 +1,8 @@
 <footer>
-    <p> Footer Works</p>
 <mat-toolbar color="accent">
     <div>
-        <a mat-stroked-button color="" [routerLink]="['/data-page']" (click)="updatePage(1)">Data</a>
-        <a mat-stroked-button color="" [routerLink]="['/how-to-come-page']" (click)="updatePage(2)">How To Come ?</a>
+        <a mat-stroked-button color="" [routerLink]="['admin/data']" (click)="updatePage(1)">Data</a>
+        <a mat-stroked-button color="" [routerLink]="['/how-to-come']" (click)="updatePage(2)">How To Come ?</a>
     </div>
 </mat-toolbar>
 </footer>
