--- a/angular/cinema/src/app/component/visitor/movie/movie.component.scss
+++ b/angular/cinema/src/app/component/visitor/movie/movie.component.scss
@@ -1,8 +1,13 @@
 mat-card {
-    height: 100% ;
-    width: 100% ;
+    height: 100%;
+    width: 100%;
 }
 
 img {
-    height: 90% ;
+    height: 90%;
+}
+
+mat-grid-tile:hover {
+    transform: scale(1.05) ;
+    cursor:pointer
 }
