Add Q : late night update ... website okish

--- a/angular/cinema/src/app/component/admin/admin.component.html
+++ b/angular/cinema/src/app/component/admin/admin.component.html
@@ -47,8 +47,7 @@
             </mat-card-header>
 
             <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/user/create']">Create User</a></button>
-            <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/user/update']">Update User</a></button>
-            <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/user/delete']">Delete User</a></button>
+            <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/user/all']">Update/Delete User</a></button>
 
           </mat-card>
 
@@ -64,7 +63,6 @@
             </mat-card-header>
 
             <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/timetable/create']">Create TimeTable</a></button>
-            <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/timetable/update']">Update TimeTable</a></button>
             <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/admin/timetable/delete']">Delete TimeTable</a></button>
 
 
