--- a/angular/cinema/src/app/component/admin/create-user/create-user.component.html
+++ b/angular/cinema/src/app/component/admin/create-user/create-user.component.html
@@ -1,5 +1,7 @@
-<p>create-user works!</p>
-
+<mat-card>
+    <mat-card-header>
+        <mat-card-title> Add User Informations :</mat-card-title>
+    </mat-card-header>
 <form (ngSubmit)="onSubmit()">
     <div>
         <mat-form-field appearance="fill" >
