--- a/angular/cinema/src/app/component/admin/update-movie/update-movie.component.html
+++ b/angular/cinema/src/app/component/admin/update-movie/update-movie.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2" gutterSize="12px" rowHeight="800px">
+<mat-grid-list cols="2" gutterSize="12px" rowHeight="100vh">
 
     <mat-grid-tile>
         <mat-card>
