--- a/angular/cinema/src/app/component/admin/admin.component.scss
+++ b/angular/cinema/src/app/component/admin/admin.component.scss
@@ -1,14 +1,17 @@
 button {
-    margin: auto ;
-    margin-top: 5px ;
-    margin-bottom: 5px ;
-    padding: 5px ;
+    margin-top: 8px ;
+    margin-bottom: 8px ;
+    padding: 8px;
     width: 100% ;
 }
 
 mat-card {
     width: 100% ;
     height: 80%;
+}
+
+mat-card-title {
+    margin-top: 5px ;
 }
 
 a {
