--- a/angular/cinema/src/app/component/admin/all-user/all-user.component.html
+++ b/angular/cinema/src/app/component/admin/all-user/all-user.component.html
@@ -1,47 +1,105 @@
+<mat-grid-list cols="4" gutterSize="12px" rowHeight="100vh">
 
-    <mat-tab-group>
+    <mat-grid-tile colspan="1">
+        <mat-card>
+            <mat-card-title>Update Selected User</mat-card-title>
+            <mat-card-content>
+                <form (ngSubmit)="onSubmit()">
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Your Pseudo</mat-label>
+                            <input matInput name='pseudo' [(ngModel)]="selectedUser.pseudo" required>
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Email</mat-label>
+                            <input matInput name='email' [(ngModel)]="selectedUser.idPerson.email" required>
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Family Name</mat-label>
+                            <input matInput name='familyName' [(ngModel)]="selectedUser.idPerson.familyName">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>First Name</mat-label>
+                            <input matInput name='firstName' [(ngModel)]="selectedUser.idPerson.firstName">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>BirthDate</mat-label>
+                            <input matInput name='birthdate' type=date [(ngModel)]="selectedUser.idPerson.birthdate">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Genre/Sexe/Self</mat-label>
+                            <input matInput name='genre' [(ngModel)]="selectedUser.idPerson.genre">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="fill">
+                            <mat-label>City</mat-label>
+                            <input matInput name='city' [(ngModel)]="selectedUser.idPerson.city">
+                        </mat-form-field>
+                    </div>
 
-        <mat-tab label="User">
-            <table mat-table [dataSource]="users" class="mat-elevation-z8">
-                
-                <ng-container matColumnDef="USER">
-                    <th mat-header-cell *matHeaderCellDef> User </th>
-                    <td mat-cell *matCellDef="let user">{{user.pseudo}}#{{user.id}}</td>
+                    <button mat-raised-button color="primary" type="submit">Update Profile</button>                    
+                </form>
+            </mat-card-content>
+        </mat-card>
+
+    </mat-grid-tile>
+    <mat-grid-tile colspan="3">
+        <mat-card>
+        <div class="mat-elevation-z8 app-qby-table" >
+            <table mat-table [dataSource]="users" class="">
+                <!-- Position Column -->
+                <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef>ID</th>
+                  <td mat-cell *matCellDef="let element">{{element.id}}</td>
                 </ng-container>
-
-                <ng-container matColumnDef="PERSON">
-                    <th mat-header-cell *matHeaderCellDef> Personne </th>
-                    <td mat-cell *matCellDef="let user">{{ user.idPerson.familyName}} {{ user.idPerson.firstName }}</td>
+              
+                <!-- Name Column -->
+                <ng-container matColumnDef="pseudo">
+                  <th mat-header-cell *matHeaderCellDef>Pseudo</th>
+                  <td mat-cell *matCellDef="let element">{{element.pseudo}}</td>
+                </ng-container>
+              
+                <!-- Weight Column -->
+                <ng-container matColumnDef="familyName">
+                  <th mat-header-cell *matHeaderCellDef>Family Name</th>
+                  <td mat-cell *matCellDef="let element">{{element.idPerson.familyName}}</td>
+                </ng-container>
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="firstName">
+                  <th mat-header-cell *matHeaderCellDef>First Name</th>
+                  <td mat-cell *matCellDef="let element">{{element.idPerson.firstName}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="DELETE">
                     <th mat-header-cell *matHeaderCellDef> DELETE </th>
-                    <td mat-cell *matCellDef="let user">
-                        <button mat-icon-button class="mdc-button mdc-button--raised" (click)="deleteByIdUser(user)">
+                    <td mat-cell *matCellDef="let element; let i = index">
+                        <button mat-mini-fab color="primary" (click)="delete(element, i)" aria-label="Example icon button with a delete icon">
                             <mat-icon>delete</mat-icon>
                         </button>
-                        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-                            <mat-icon>menu</mat-icon>
-                          </button>
                     </td>
                 </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="['id','pseudo','familyName','firstName', 'DELETE']; sticky: true"></tr>
+                <tr
+                    mat-row
+                    (click)="selectedUser = row"
+                    *matRowDef="let row; columns: ['id','pseudo','familyName','firstName', 'DELETE'];"
+                ></tr>
+              </table>
 
-                <tr mat-header-row *matHeaderRowDef="['USER','PERSON','DELETE'];"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['USER','PERSON','DELETE'];"></tr>
-
-            </table>
-        </mat-tab>
-
-        <mat-tab label="Create User" hidden="visible">
-            <app-create-user></app-create-user>
-        </mat-tab>
-        <mat-tab label="Update User">
-            <app-update-user></app-update-user>
-        </mat-tab>
-        <mat-tab label="Delete User">
-            <app-delete-user></app-delete-user>
-        </mat-tab>
-    </mat-tab-group>
-
-
-
+            </div>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
