--- a/angular/cinema/src/app/component/admin/create-product/create-product.component.html
+++ b/angular/cinema/src/app/component/admin/create-product/create-product.component.html
@@ -1,1 +1,32 @@
-<p>create-product works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title> Add Product Informations :</mat-card-title>
+    </mat-card-header>
+<form (ngSubmit)="onSubmit()">
+<div>
+    <mat-form-field appearance="fill" >
+        <mat-label>Product Name</mat-label>
+        <input matInput name='required' [(ngModel)]="productJSON.productName" required>
+    </mat-form-field>
+</div>
+<div>
+    <mat-form-field appearance="fill" >
+        <mat-label>Category</mat-label>
+        <input matInput name='category' [(ngModel)]="productJSON.category">
+    </mat-form-field>
+</div>
+<div>
+    <mat-form-field appearance="fill">
+        <mat-label>Price</mat-label>
+        <input matInput name='price' [(ngModel)]="productJSON.price" required>
+    </mat-form-field>
+</div>
+<div>
+    <mat-form-field appearance="fill">
+        <mat-label>Description</mat-label>
+        <input matInput name='productDescription' [(ngModel)]="productJSON.productDescription">
+    </mat-form-field>
+</div>
+<button mat-raised-button color="primary" type="submit">SUBMIT PRODUCT</button>
+</form>
+</mat-card>
