--- a/angular/cinema/src/app/component/admin/delete-time-table/delete-time-table.component.html
+++ b/angular/cinema/src/app/component/admin/delete-time-table/delete-time-table.component.html
@@ -1,13 +1,36 @@
-<p>delete-time-table works!</p>
-<mat-form-field appearance="fill">
-    <mat-label>Session to Delete</mat-label>
-    <mat-select [(value)]="selectedSession">
-      <mat-option *ngFor="let session of sessions" [value]="session">
-        {{session | json}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+<mat-card>
+  
+    <mat-card-title>Delete Session</mat-card-title>
+    <table mat-table [dataSource]="sessions" [trackBy]="trackSession" class="mat-elevation-z8">
 
-  <form (ngSubmit)="onSubmit()">
-    <button mat-button type="submit">TEST SUBMIT</button>
-    </form>
+      <ng-container matColumnDef="FILM">
+        <th mat-header-cell *matHeaderCellDef> FILM </th>
+        <td mat-cell *matCellDef="let session"> {{session.idMovie.title}} </td>
+      </ng-container>
+      <ng-container matColumnDef="DATE">
+        <th mat-header-cell *matHeaderCellDef> DATE </th>
+        <td mat-cell *matCellDef="let session"> {{session.idDate | date : 'fullDate'}} </td>
+      </ng-container>
+      <ng-container matColumnDef="HOUR">
+        <th mat-header-cell *matHeaderCellDef> HOUR </th>
+        <td mat-cell *matCellDef="let session"> {{session.idDate | date : 'shortTime'}}
+      </ng-container>
+      <ng-container matColumnDef="ROOM">
+        <th mat-header-cell *matHeaderCellDef> ROOM </th>
+        <td mat-cell *matCellDef="let session"> {{session.idCinemaRoom.roomName}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="DELETE">
+        <th mat-header-cell *matHeaderCellDef> DELETE </th>
+        <td mat-cell *matCellDef="let session; let i = index">
+          <button mat-mini-fab color="primary" (click)="delete(session, i)"
+            aria-label="Example icon button with a delete icon">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE','HOUR', 'ROOM',  'DELETE'];"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'HOUR', 'ROOM', 'DELETE'];"></tr>
+    </table>
+</mat-card>
