--- a/angular/cinema/src/app/component/admin/update-movie/update-movie.component.scss
+++ b/angular/cinema/src/app/component/admin/update-movie/update-movie.component.scss
@@ -1,13 +1,14 @@
 form {
     text-align: center;
-    margin: 24px ;
+    margin: 24px;
 }
 
 .example-button-row .mat-button-base {
     margin: 8px 8px 8px 0;
-  }
+}
 
 mat-card {
-    height:700px ;
-    width: 100%
+    height: 90vh;
+    width: 100%;
 }
+
