--- a/angular/cinema/src/app/component/visitor/quizz-on-phone/quizz-on-phone.component.scss
+++ b/angular/cinema/src/app/component/visitor/quizz-on-phone/quizz-on-phone.component.scss
@@ -1,9 +1,23 @@
 button {
-  min-width: 100px;
-  padding : 20px ;
-  border-radius : 10px ;
+  min-width: 200px;
+  min-height: 100px;
+  padding : 10px ;
+  border-radius : 50px ;
 }
 
 [hidden] {
   display: none !important;
+}
+
+mat-card {
+  min-height: 100px ;
+  margin-bottom: 24px ;
+}
+
+mat-card-title {
+  margin-bottom: 24px ;
+}
+
+div {
+  text-align: right;
 }
