--- a/angular/cinema/src/app/component/visitor/time-table/time-table.component.html
+++ b/angular/cinema/src/app/component/visitor/time-table/time-table.component.html
@@ -1,23 +1,39 @@
+<mat-grid-list cols="4" rowHeight="512px" gutterSize="24px">
+    <div *ngFor="let movie of movies ;let index = index">
+        <mat-grid-tile colspan="1">
 
-<table mat-table [dataSource]="sessions" class="mat-elevation-z8">
+            <mat-card class=".mat-app-background">
+                <img mat-card-image src="{{image(movie)}}" alt="{{movie.title}}">
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="3">
+            <table mat-table [dataSource]="sessions[index]" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="FILM">
-        <th mat-header-cell *matHeaderCellDef> FILM </th>
-        <td mat-cell *matCellDef="let session"> {{session.idMovie.title}} </td>
-    </ng-container>
-    <ng-container matColumnDef="DATE">
-        <th mat-header-cell *matHeaderCellDef> DATE </th>
-        <td mat-cell *matCellDef="let session"> {{session.idDate}} </td>
-    </ng-container>
-    <ng-container matColumnDef="CINEMA ROOM">
-        <th mat-header-cell *matHeaderCellDef> CINEMA ROOM </th>
-        <td mat-cell *matCellDef="let session"> {{session.idCinemaRoom.roomName}} </td>
-    </ng-container>
-    <ng-container matColumnDef="SEAT">
-        <th mat-header-cell *matHeaderCellDef> SEAT LEFT </th>
-        <td mat-cell *matCellDef="let session "> {{session.seatsLeft}} </td>
-    </ng-container>
+                <ng-container matColumnDef="FILM">
+                    <th mat-header-cell *matHeaderCellDef> FILM </th>
+                    <td mat-cell *matCellDef="let session"> {{session.idMovie.title}} </td>
+                </ng-container>
+                <ng-container matColumnDef="DATE">
+                    <th mat-header-cell *matHeaderCellDef> DATE </th>
+                    <td mat-cell *matCellDef="let session"> {{session.idDate | date : "fullDate"}} </td>
+                </ng-container>
+                <ng-container matColumnDef="HOUR">
+                    <th mat-header-cell *matHeaderCellDef> HOUR </th>
+                    <td mat-cell *matCellDef="let session"> {{session.idDate | date : "shortTime"}} </td>
+                </ng-container>
+                <ng-container matColumnDef="CINEMA ROOM">
+                    <th mat-header-cell *matHeaderCellDef> CINEMA ROOM </th>
+                    <td mat-cell *matCellDef="let session"> {{session.idCinemaRoom.roomName}} </td>
+                </ng-container>
+                <ng-container matColumnDef="SEAT">
+                    <th mat-header-cell *matHeaderCellDef> SEAT LEFT </th>
+                    <td mat-cell *matCellDef="let session "> {{session.seatsLeft}} </td>
+                </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE', 'CINEMA ROOM', 'SEAT'];"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'CINEMA ROOM', 'SEAT'];"></tr>
-</table>
+                <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE', 'HOUR','CINEMA ROOM', 'SEAT'];"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'HOUR','CINEMA ROOM', 'SEAT'];"></tr>
+            </table>
+
+        </mat-grid-tile>
+    </div>
+</mat-grid-list>
