Add Q :  Correction of typo in text

--- a/angular/cinema/src/app/component/admin/create-time-table/create-time-table.component.html
+++ b/angular/cinema/src/app/component/admin/create-time-table/create-time-table.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   
-    <mat-card-title>Delete Session</mat-card-title>
+    <mat-card-title>Create Movie Sessions</mat-card-title>
 <form (ngSubmit)="onSubmit()">
     <div>
         <mat-form-field appearance="fill">
