--- a/angular/cinema/src/app/component/admin/delete-movie/delete-movie.component.html
+++ b/angular/cinema/src/app/component/admin/delete-movie/delete-movie.component.html
@@ -11,7 +11,7 @@
   <mat-grid-tile>
     <mat-card>
       <mat-card-header>
-        <mat-card-title> Update Movie Informations :</mat-card-title>
+        <mat-card-title> Delete Movie Informations :</mat-card-title>
         <mat-card-subtitle>
 
         </mat-card-subtitle>
