--- a/angular/cinema/src/app/component/user/create-reservation/create-reservation.component.html
+++ b/angular/cinema/src/app/component/user/create-reservation/create-reservation.component.html
@@ -5,7 +5,7 @@
 
 
         <mat-card-content>
-                <mat-card-title>My Purchases</mat-card-title>
+                <mat-card-title>Create a New Reservation !</mat-card-title>
                 <button mat-raised-button color="primary">
                         <a mat-stroked-button color="" [routerLink]="['/user']">Return</a>
                 </button>
@@ -41,7 +41,7 @@
             </mat-select>
         </mat-form-field>
     </div>
-    <button mat-button type="submit">SUBMIT NEW SESSION</button>
+    <button mat-raised-button color="primary" type="submit">SUBMIT NEW SESSION</button>
 </form>
 </mat-card-content>
 </mat-card>
