--- a/angular/cinema/src/app/component/admin/delete-product/delete-product.component.html
+++ b/angular/cinema/src/app/component/admin/delete-product/delete-product.component.html
@@ -1,7 +1,7 @@
 
       <mat-card>
         <mat-card-header>
-          <mat-card-title> Update Movie Informations :</mat-card-title>
+          <mat-card-title> Delete Product Informations :</mat-card-title>
         </mat-card-header>
   
         <form (ngSubmit)="onSubmit()">
