Add Q : some update with Y

--- a/angular/cinema/src/app/component/admin/update-movie/update-movie.component.html
+++ b/angular/cinema/src/app/component/admin/update-movie/update-movie.component.html
@@ -78,7 +78,7 @@
                             [(ngModel)]="selectedMovie.movieDescription"></textarea>
                     </mat-form-field>
                 </div>
-                <button mat-button type="submit">SUBMIT UPDATE</button>
+                <button mat-raised-button color="primary" type="submit">SUBMIT UPDATE</button>
             </form>
         </mat-card>
     </mat-grid-tile>
