--- a/angular/cinema/src/app/component/user/create-reservation/create-reservation.component.html
+++ b/angular/cinema/src/app/component/user/create-reservation/create-reservation.component.html
@@ -5,7 +5,7 @@
 
 
         <mat-card-content>
-                <mat-card-title>Create a New Reservation !</mat-card-title>
+                <mat-card-title>Book a Reservation !</mat-card-title>
                 <button mat-raised-button color="primary">
                         <a mat-stroked-button color="" [routerLink]="['/user']">Return</a>
                 </button>
