--- a/angular/cinema/src/app/component/admin/create-user/create-user.component.html
+++ b/angular/cinema/src/app/component/admin/create-user/create-user.component.html
@@ -12,7 +12,7 @@
     <div>
         <mat-form-field appearance="fill" >
             <mat-label>Password</mat-label>
-            <input matInput name='pwd' [(ngModel)]="userJSON.pwd">
+            <input matInput type="password" name='pwd' [(ngModel)]="userJSON.pwd">
         </mat-form-field>
     </div>
     <div>
@@ -27,5 +27,5 @@
         </mat-form-field>
     </div>
 
-    <button mat-button type="submit">Créer l'utilisateur</button>
+    <button mat-raised-button color="primary" type="submit">Créer l'utilisateur</button>
     </form>
