--- a/angular/cinema/src/app/component/visitor/description-movie/description-movie.component.html
+++ b/angular/cinema/src/app/component/visitor/description-movie/description-movie.component.html
@@ -33,58 +33,59 @@
             <mat-card-content>
                 Description : {{movie.movieDescription}}
             </mat-card-content>
-
-            <table mat-table [dataSource]="comments" matSort>
+            <div class="app-qby-table">
+            <table mat-table [dataSource]="comments" >
 
                 <!-- ID Column -->
                 <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Pseudo </th>
+                    <th mat-header-cell *matHeaderCellDef> Pseudo </th>
                     <td mat-cell *matCellDef="let row"> {{row.idUser.pseudo}} </td>
                 </ng-container>
         
                 <!-- Progress Column -->
                 <ng-container matColumnDef="progress">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+                    <th mat-header-cell *matHeaderCellDef> Rating </th>
                     <td mat-cell *matCellDef="let row"> {{row.rating}}</td>
                 </ng-container>
         
                 <!-- Name Column -->
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Comment </th>
+                    <th mat-header-cell *matHeaderCellDef> Comment </th>
                     <td mat-cell *matCellDef="let row"> {{row.commentary}} </td>
                 </ng-container>
         
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
+        </div>
         </mat-card>
-
     </mat-grid-tile>
 
     <mat-grid-tile colspan="2">
         <mat-card class="app-qby-content">
-            <table mat-table [dataSource]="sessions" matSort>
+
+            <table mat-table [dataSource]="sessions" (click)="redirection()" class="app-qby-table">
 
                 <!-- ID Column -->
                 <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Day </th>
+                    <th mat-header-cell *matHeaderCellDef> Day </th>
                     <td mat-cell *matCellDef="let row"> {{row.idDate | date : 'fullDate'}} </td>
                 </ng-container>
         
                 <!-- Progress Column -->
                 <ng-container matColumnDef="progress">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Hour </th>
+                    <th mat-header-cell *matHeaderCellDef> Hour </th>
                     <td mat-cell *matCellDef="let row"> {{row.idDate | date : 'fullTime'}}</td>
                 </ng-container>
         
                 <!-- Name Column -->
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Room </th>
+                    <th mat-header-cell *matHeaderCellDef> Room </th>
                     <td mat-cell *matCellDef="let row"> {{row.idCinemaRoom.roomName}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="fruit">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Room </th>
+                    <th mat-header-cell *matHeaderCellDef> Room </th>
                     <td mat-cell *matCellDef="let row"> {{row.seatsLeft}} </td>
                 </ng-container>
         
@@ -98,15 +99,33 @@
     </mat-grid-tile>
     <mat-grid-tile colspan="1">
         <mat-card class="app-qby-content">
-            <mat-card-title>{{movie.title}} {{movie.averageRating}}/5 </mat-card-title>
-            <mat-card-subtitle>
-                Genre : {{movie.movieGenre}}
-            </mat-card-subtitle>
-            <mat-card-content>
-                Duration : {{movie.movieDuration}}
+            <mat-card-title>Add a Comment !</mat-card-title>
+            <mat-card-content *ngIf="access==0">
+                <button mat-raised-button color="primary">
+                    <a mat-stroked-button color="" [routerLink]="['/signin']">Sign In Now !</a>
+                </button>
             </mat-card-content>
-            <mat-card-content>
-                Description : {{movie.movieDescription}}
+            <mat-card-content *ngIf="access==1">
+                <form (submit)="onSubmit()">
+                <mat-form-field appearance="fill">
+                    <mat-label>Your Rating</mat-label>
+                    <mat-select [(value)]="commentary.rating">
+                        <mat-option value="1">1</mat-option>
+                        <mat-option value="2">2</mat-option>
+                        <mat-option value="3">3</mat-option>
+                        <mat-option value="4">4</mat-option>
+                        <mat-option value="5">5</mat-option>
+                    </mat-select>
+                    </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Your Comment !</mat-label>
+                    <textarea matInput name="commentary" [(ngModel)]="commentary.commentary"></textarea>
+                  </mat-form-field>
+
+                  <button mat-raised-button type="submit" color="primary">
+                    Add Comment !
+                </button>
+            </form>
             </mat-card-content>
         </mat-card>
 
