--- a/angular/cinema/src/app/component/visitor/description-movie/description-movie.component.scss
+++ b/angular/cinema/src/app/component/visitor/description-movie/description-movie.component.scss
@@ -4,6 +4,7 @@ button {
 
 mat-card-title {
     text-align: center;
+    margin-bottom: 24px;
 }
 
 mat-card-header {
@@ -19,6 +20,7 @@ mat-card-header {
 .app-qby-content {
     height:90%;
     width:100%;
+    text-align: center;
 }
 mat-icon {
     position: absolute;
@@ -42,3 +44,25 @@ table {
     width: 100%;
     margin-top: 24px;
   }
+
+
+  .mat-row .mat-cell {
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    cursor: pointer;
+  }
+  
+  .mat-row:hover .mat-cell {
+    border-color: currentColor;
+  }
+
+  .app-qby-table {
+    width: 100%;
+    height: 60%;
+    overflow: auto;
+  }
+  
+  table {
+    width: 100%;
+  }
+  
