--- a/angular/cinema/src/app/component/admin/create-movie/create-movie.component.html
+++ b/angular/cinema/src/app/component/admin/create-movie/create-movie.component.html
@@ -1,7 +1,3 @@
-
-
-
-
 <mat-card>
     <mat-card-header>
         <mat-card-title> Add Movie Informations :</mat-card-title>
@@ -55,6 +51,6 @@
         <input matInput name='movieDescription' [(ngModel)]="movieJSON.movieDescription">
     </mat-form-field>
 </div>
-<button mat-raised-button color="primary" type="submit">TEST SUBMIT</button>
+<button mat-raised-button color="primary" type="submit">SUBMIT MOVIE</button>
 </form>
 </mat-card>
